--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,8 +1,8 @@
-@use './global';
-@use './top-bar.scss';
-@use'./nav.scss';
-@use'./hero.scss';
-@use'./attractions.scss';
-@use'./footer.scss';
-@use'./cookie-bar.scss';
-@use'./gallery.scss';
+@use './utilities/global';
+@use './components/top-bar.scss';
+@use'./components/nav.scss';
+@use'./components/hero.scss';
+@use'./components/attractions.scss';
+@use'./components/footer.scss';
+@use'./components/cookie-bar.scss';
+@use'./components/gallery.scss';
