--- a/src/sass/components/hero.scss
+++ b/src/sass/components/hero.scss
@@ -1,5 +1,5 @@
-@use './utilities/colors';
-@use'./utilities/mixins';
+@use '../utilities/colors';
+@use'../utilities/mixins';
 
 .hero{
     &__container{
