--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -100,7 +100,7 @@ color:rgb(160, 159, 159) !important
 
         &:hover{
             font-weight: bold;
-            color:white
+            color:white !important
 
         }
       }
