update main page

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,3 +6,4 @@
 @use'./components/footer.scss';
 @use'./components/cookie-bar.scss';
 @use'./components/gallery.scss';
+@use'./components/rooms-slider.scss'
