--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,4 +6,6 @@
 @use'./components/footer.scss';
 @use'./components/cookie-bar.scss';
 @use'./components/gallery.scss';
-@use'./components/rooms-slider.scss'
+@use'./components/rooms-slider.scss';
+@use'./components/room-cta.scss';
+@use'./components/mobile-buttons.scss'
